Fix image paths for production deployment

--- a/src/pages/admin-dashboard.html
+++ b/src/pages/admin-dashboard.html
@@ -131,7 +131,7 @@
             <span class="close" id="closeUserDetailModal">&times;</span>
             <div class="user-detail-header">
                 <div class="user-picture-container">
-                    <img id="userDetailPicture" src="../assets/default-avatar.png" alt="User Picture" class="user-detail-picture">
+                    <img id="userDetailPicture" src="/assets/default-avatar.png" alt="User Picture" class="user-detail-picture">
                     <div class="photo-approval-section hidden-display" id="photoApprovalSection">
                         <p id="photoStatusLabel" class="photo-status-text">Pending Approval</p>
                         <div class="photo-action-buttons">
