--- a/src/pages/user-dashboard.html
+++ b/src/pages/user-dashboard.html
@@ -13,7 +13,7 @@
     <header class="user-header">
         <div class="header-left">
             <div class="logo-container">
-                <img src="../assets/usa-army-logo.png" alt="USA Army Logo" class="army-logo">
+                <img src="/assets/usa-army_logo.png" alt="USA Army Logo" class="army-logo">
             </div>
         </div>
 
@@ -68,7 +68,7 @@
             <section class="user-profile-section">
                 <div class="profile-header">
                     <div class="profile-picture-container">
-                        <img id="profilePicture" src="../assets/default-avatar.png" alt="Profile Picture" class="profile-picture">
+                        <img id="profilePicture" src="/assets/default-avatar.png" alt="Profile Picture" class="profile-picture">
                         <div class="status-badge">
                             <span class="status-icon active" id="statusIcon"></span>
                             <span class="status-text" id="statusText">ACTIVE</span>
@@ -166,7 +166,7 @@
                         <div class="form-group">
                             <label>Passport Picture</label>
                             <div class="file-upload-display" id="spousePassportDisplay">
-                                <img src="../assets/default-avatar.png" alt="Spouse Passport" class="passport-preview">
+                                <img src="/assets/default-avatar.png" alt="Spouse Passport" class="passport-preview">
                                 <p>No document uploaded</p>
                             </div>
                         </div>
