--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -55,7 +55,7 @@
     <!-- Video Background Section -->
     <div class="video-background-container">
       <video class="homepage-video" id="homepageVideo" muted loop>
-        <source src="../../video/01.mp4" type="video/mp4" />
+        <source src="/video/01.mp4" type="video/mp4" />
         Your browser does not support the video tag.
       </video>
     </div>
