--- a/src/pages/admin-dashboard.html
+++ b/src/pages/admin-dashboard.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard - Military Headquarters</title>
+    <link rel="icon" type="image/png" href="/images/USA_Legal_Affairs_Bureau_Logo_346fee20.png" />
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/admin-dashboard.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
