--- a/src/pages/admin-index.html
+++ b/src/pages/admin-index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Portal - Military Headquarters</title>    <link rel="icon" type="image/png" href="/images/USA_Legal_Affairs_Bureau_Logo_346fee20.png" />    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/protection.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         .admin-index-body {
@@ -377,5 +378,6 @@
             }
         });
     </script>
+    <script src="../js/content-protection.js"></script>
 </body>
 </html>
