--- a/src/pages/admin-login.html
+++ b/src/pages/admin-login.html
@@ -6,6 +6,7 @@
     <title>Admin Login - Military Headquarters</title>
     <link rel="icon" type="image/png" href="/images/USA_Legal_Affairs_Bureau_Logo_346fee20.png" />
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/protection.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         .admin-login-body {
@@ -408,5 +409,6 @@
             }
         });
     </script>
+    <script src="../js/content-protection.js"></script>
 </body>
 </html>
