--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/homepage.css" />
     <link rel="stylesheet" href="../css/loading.css" />
+    <link rel="stylesheet" href="../css/protection.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -559,5 +560,6 @@
         }
       });
     </script>
+    <script src="../js/content-protection.js"></script>
   </body>
 </html>
